fixes styling/markup for layout issues on Safari, Firefox + reworks project card arrow markup to avoid absolute position where unneeded + adjusts rootMargin on section observer for performance on Safari

--- a/src/assets/scss/components/1-pages/_project-archive.scss
+++ b/src/assets/scss/components/1-pages/_project-archive.scss
@@ -1,93 +1,103 @@
-@use '../../variables' as *;
-@use '../../base/mixins' as mixins;
+@use "../../variables" as *;
+@use "../../base/mixins" as mixins;
 
 .project-archive {
+	.project-cards {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 0.25rem;
+		margin: 4rem 0;
+		@include mixins.media-breakpoint-up(sm) {
+			gap: 2rem;
+		}
+		.project-card {
+			flex: 1 1 100%;
+			position: relative;
+			@include mixins.media-breakpoint-up(sm) {
+				flex: 0 1 47%;
+			}
+			@include mixins.media-breakpoint-up(lg) {
+				flex: 0 1 31%;
+			}
+			.entry-container {
+				display: block;
+				position: relative;
+				z-index: 1;
+				.card-image {
+					background-position: center;
+					background-size: cover;
+					background-repeat: no-repeat;
+					min-height: 200px;
+					position: relative;
+					width: 100%;
+					z-index: 1;
+					@include mixins.media-breakpoint-up(sm) {
+						min-height: 175px;
+					}
+					@include mixins.media-breakpoint-up(md) {
+						min-height: 200px;
+					}
+				}
+				.card-content {
+					padding-top: 0.75rem;
+					position: relative;
+					z-index: 1;
+					h3 {
+						font-size: 1rem;
+						font-weight: $regular;
+					}
+					.entry-subtitle {
+						padding-bottom: 0.25rem;
+					}
+				}
+				.card-arrow {
+					height: 1.5rem;
+					transition: 0.4s;
+					width: 1.5rem;
+					z-index: 1;
+					@include mixins.media-breakpoint-up(sm) {
+						top: calc(175px + 0.5rem);
+					}
+					@include mixins.media-breakpoint-up(md) {
+						top: calc(200px + 0.5rem);
+					}
+				}
+				.project-skills {
+					gap: 0.5rem;
+					padding-top: 0.5rem;
+					.skill {
+						font-size: 0.75rem;
+						padding: 0.375rem 0.8rem 0.3rem 0.8rem;
+					}
+				}
+			}
+			&.section-entry {
+				height: auto;
+				margin-bottom: 2rem;
+				width: 100%;
+				transition: 0.4s;
+				@include mixins.media-breakpoint-up(sm) {
+					margin-bottom: 1rem;
+				}
 
-  .project-cards {
-    display: flex;
-    flex-wrap: wrap;
-    gap: .25rem;
-    margin: 4rem 0;
-    @include mixins.media-breakpoint-up(sm) {
-      gap: 2rem;
-    }
-    .project-card {
-      flex: 1 1 100%;
-      position: relative;
-      @include mixins.media-breakpoint-up(sm) {
-        flex: 0 1 48%;
-      }
-      @include mixins.media-breakpoint-up(lg) {
-        flex: 0 1 31%;
-      }
-      .entry-container {
-        .card-image {
-          background-position: center;
-          background-size: cover;
-          background-repeat: no-repeat;
-          min-height: 200px;
-          position: relative;
-          width: 100%;
-          z-index: 1;
-          @include mixins.media-breakpoint-up(sm) {
-            min-height: 175px;
-          }
-          @include mixins.media-breakpoint-up(md) {
-            min-height: 200px;
-          }
-        }
-        .card-content {
-          padding-top: .75rem;
-          position: relative;
-          z-index: 1;
-          h3 {
-            font-size: 1rem;
-            font-weight: $regular;
-          }
-          .entry-subtitle {
-            padding-bottom: .25rem;
-          }
-        }
-        .project-skills {
-          gap: .5rem;
-          padding-top: .5rem;
-          .skill {
-            font-size: .75rem;
-            padding: .375rem .8rem .3rem .8rem;
-          }
-        }
-      }
-      &.section-entry {
-        margin-bottom: 2rem;
-        @include mixins.media-breakpoint-up(sm) {
-          margin-bottom: 1rem;
-        }
-
-        // arrow icon for project cards
-        svg {
-          height: 1.5rem;
-          position: absolute;
-          right: 1rem;
-          top: calc(200px + .5rem);
-          transition: .4s;
-          width: 1.5rem;
-          z-index: 1;
-          @include mixins.media-breakpoint-up(sm) {
-            top: calc(175px + .5rem);
-          }
-          @include mixins.media-breakpoint-up(md) {
-            top: calc(200px + .5rem);
-          }
-        }
-        &:hover,
-        &.active {
-          svg {
-            fill : $teal;
-            right: .5rem;
-            transition: .4s;
-          }
-        }
-      }
-    }
-  }
+				// arrow icon for project cards
+				svg {
+					width: 1.5rem;
+					height: 1.5rem;
+					right: 0.5rem;
+					position: relative;
+					transition: 0.4s;
+				}
+				&:hover,
+				&.active {
+					transition: 0.4s;
+					svg {
+						fill: $teal;
+						right: -0;
+						transition: 0.4s;
+					}
+				}
+			}
+		}
+	}
 }
